<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_landing">

    <fragment
        android:id="@+id/nav_landing"
        android:name="com.taxi_pas_4.ui.landing.LandingFragment"
        android:label="@string/landing_greeting"
        tools:layout="@layout/fragment_landing" />

    <fragment
        android:id="@+id/nav_visicom"
        android:name="com.taxi_pas_4.ui.visicom.VisicomFragment"

        tools:layout="@layout/fragment_visicom" />
<!--    <fragment-->
<!--        android:id="@+id/nav_home"-->
<!--        android:name="com.taxi_pas_4.ui.home.HomeFragment"-->
<!--        android:label="@string/menu_home"-->
<!--        tools:layout="@layout/fragment_home" />-->
    <fragment
        android:id="@+id/nav_cancel"
        android:name="com.taxi_pas_4.ui.active_order.ActiveOrderFragment"
        android:label="@string/order_to_cancel"
        tools:layout="@layout/fragment_cancel" />
<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.taxi_pas_4.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

    <fragment
        android:id="@+id/nav_uid"
        android:name="com.taxi_pas_4.ui.history.HistoryFragment"
        android:label="@string/uid_menu"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.taxi_pas_4.ui.bonus.BonusFragment"
        android:label="@string/my_bonus_menu"
        tools:layout="@layout/fragment_bonus" />

    <fragment
        android:id="@+id/nav_card"
        android:name="com.taxi_pas_4.ui.card.CardFragment"
        android:label="@string/my_card_pay"
        tools:layout="@layout/fragment_card" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.taxi_pas_4.ui.account.AccountFragment"
        android:label="@string/account_menu"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.taxi_pas_4.ui.about.AboutFragment"
        android:label="@string/conf"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_author"
        android:name="com.taxi_pas_4.ui.author.AuthorFragment"
        android:label="@string/author_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_finish_separate"
        android:name="com.taxi_pas_4.ui.finish.fragm.FinishSeparateFragment"
        android:label="@string/your_order"
        tools:layout="@layout/fragment_finish_separate" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.taxi_pas_4.ui.visicom.visicom_search.VisicomSearchFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_visicom_search" />

    <fragment
        android:id="@+id/nav_cacheOrder"
        android:name="com.taxi_pas_4.ui.finish.fragm.CacheOrderFragment"
        android:label="@string/your_order"
        tools:layout="@layout/fragment_cache_order" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.taxi_pas_4.ui.open_map.OpenStreetMapFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_openstreetmap" />

    <fragment
        android:id="@+id/nav_city"
        android:name="com.taxi_pas_4.ui.cities.check.CityCheckFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_city_check" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.taxi_pas_4.ui.settings.SettingsFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_options"
        android:name="com.taxi_pas_4.ui.options_order.OptionsFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_visicom_options" />

    <fragment
        android:id="@+id/nav_anr"
        android:name="com.taxi_pas_4.ui.exit.AnrFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_anr" />

    <fragment
        android:id="@+id/nav_card_ver"
        android:name="com.taxi_pas_4.ui.card.CardVerificationFragment"
        android:label="@string/search_address"
        tools:layout="@layout/activity_fondy_payment" />
    <fragment
        android:id="@+id/nav_weather"
        android:name="com.taxi_pas_4.ui.weather.WeatherFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_weather" />
</navigation>