...
    <string name="address_on_map">визначити по мапі</string>
    <string name="address_take">застосувати</string>
    <string name="main_page">Заказ</string>
    <string name="search_text">Пошук адреси</string>
    <string name="drag_marker">Для уточнення місцезнаходження пересувайте маркер</string>
    <string name="drag_marker_bottom">Натисніть на маркер та перемістіть його для уточнення розташування</string>
    <string name="menu_city">Заказ </string>
    <string name="city_kyiv">Київ та область</string>
    <string name="city_cherkassy">Черкаси</string>
    <string name="city_odessa">Одеса</string>
    <string name="city_zaporizhzhia">Запоріжжя</string>
    <string name="city_dnipro">Дніпро</string>
    <string name="city_lviv">Львів</string>
    <string name="city_ivano_frankivsk">Івано-Франківськ</string>
...
