...
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageButton
                            android:id="@+id/button1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@null"
                            android:padding="0dp"
                            android:scaleType="fitCenter"
...
